--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -1,6 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:weightSum="4">
+        <ImageButton
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_home"
+            android:src="@drawable/home"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="0dp"
+            android:layout_gravity="left|bottom" />
+        <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="#d60d0d"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
+        <ImageButton
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_filter"
+        android:src="@drawable/filter" style="?android:attr/borderlessButtonStyle"
+         />
+        <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="#d60d0d"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp" />
+        <ImageButton
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_jobs"
+        style="?android:attr/borderlessButtonStyle"
+        android:src="@drawable/work"
+         />
+        <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="#d60d0d"
+        android:padding="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp" />
+        <ImageButton
+        android:layout_width="0dp"
+        android:layout_weight="1"
+
+        android:layout_height="wrap_content"
+        android:id="@+id/button_setting"
+        android:src="@drawable/more"
+        style="?android:attr/borderlessButtonStyle"
+         />
+    </LinearLayout>
+
+
+</FrameLayout>
