--- a/app/src/main/res/layout/onfilterclick.xml
+++ b/app/src/main/res/layout/onfilterclick.xml
@@ -1,6 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <include
+        layout="@layout/menu"
+        android:id="@+id/include"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </include>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Filter"
+        android:textColor="@color/cardview_light_background"
+        android:padding="10dp"
+        android:background="#E53935"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:id="@+id/title_bar_filter"
+        android:layout_toLeftOf="@+id/button_apply"
+        android:layout_toStartOf="@+id/button_apply" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apply"
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="@color/cardview_light_background"
+        android:padding="10dp"
+        android:background="#E53935"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:id="@+id/button_apply"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/title_bar_filter" />
+
+</RelativeLayout>
