--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1" >
 
     <ImageView
         android:layout_width="80dp"
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ashish Surana"
+        android:text="Dummy Name"
         android:id="@+id/textView_name"
         android:layout_weight="0.06"
         android:layout_gravity="center_horizontal"
@@ -82,5 +82,11 @@
         android:layout_alignLeft="@+id/textView_name"
         android:layout_alignStart="@+id/textView_name"
         android:scaleType="fitXY"/>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/profileimage"
+        android:background="#9e9e9e"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"></View>
 </RelativeLayout>
