--- a/app/src/main/res/layout/job_profile.xml
+++ b/app/src/main/res/layout/job_profile.xml
@@ -1,6 +1,246 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="5dp"
+    android:scrollbars="none"
+    android:fillViewport="false"
+    android:layout_width="match_parent">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
+        >
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Company Name"
+            android:id="@+id/textView_name_profile"
+            android:layout_below="@+id/imageView_profilepic"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Asst. Engg at IBM"
+            android:id="@+id/textView_designation_profile"
+            android:layout_below="@+id/textView_name_profile"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp" />
+
+
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/edit_image"
+            android:background="@android:color/transparent"
+            android:layout_below="@+id/textView_year"
+            android:layout_alignRight="@+id/textView_bio"
+            android:layout_alignEnd="@+id/textView_bio" />
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/imageView_profilepic"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/image"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BiIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO "
+            android:id="@+id/textView_bio"
+            android:layout_below="@+id/textView_brach"
+            android:layout_alignRight="@+id/textView_year"
+            android:layout_alignEnd="@+id/textView_year"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Branch - CSE"
+            android:id="@+id/textView_brach"
+            android:layout_below="@+id/textView_designation_profile"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp" />
+
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="4dp"
+            android:layout_below="@+id/textView_bio"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="left|center">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+                <TextView
+                    android:id="@+id/info_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:text="Location" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Jaipur"
+                    android:id="@+id/textView_home_profile"
+                    android:layout_below="@+id/info_text"
+
+                    android:layout_alignLeft="@+id/textView_location_profile"
+                    android:layout_alignStart="@+id/textView_location_profile"
+                    android:layout_marginTop="5dp" />
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:id="@+id/imageView_work"
+                    android:src="@drawable/work"
+                    android:layout_alignTop="@+id/textView_location_profile"
+                    android:layout_alignLeft="@+id/info_text"
+                    android:layout_alignStart="@+id/info_text"
+                    android:layout_marginTop="2dp" />
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:id="@+id/imageView_home"
+                    android:src="@drawable/home"
+                    android:layout_alignTop="@+id/textView_home_profile"
+                    android:layout_alignLeft="@+id/imageView_work"
+                    android:layout_alignStart="@+id/imageView_work"
+                    android:layout_marginTop="2dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Mumbai"
+                    android:id="@+id/textView_location_profile"
+                    android:layout_below="@+id/textView_home_profile"
+                    android:layout_toRightOf="@+id/imageView_work"
+                    android:layout_toEndOf="@+id/imageView_work"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginBottom="5dp" />
+
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view_contact"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="4dp"
+            android:padding="0dp"
+            android:layout_below="@+id/card_view_location"
+            android:layout_alignLeft="@+id/card_view_location"
+            android:layout_alignStart="@+id/card_view_location"
+            android:layout_marginTop="5dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/card_view_location"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:nestedScrollingEnabled="false"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:text="Contact"
+                    android:id="@+id/textView_fblink2"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Twitter"
+                    android:id="@+id/textView_twlink"
+                    android:layout_below="@+id/textView_fblink2"
+                    android:layout_toRightOf="@+id/imageView_fb"
+                    android:layout_toEndOf="@+id/imageView_fb"
+                    android:layout_margin="5dp" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="email"
+                    android:id="@+id/textView_email"
+                    android:layout_below="@+id/imageView_fb"
+                    android:layout_alignLeft="@+id/textView_twlink"
+                    android:layout_alignStart="@+id/textView_twlink"
+                    android:layout_marginTop="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Phone"
+                    android:id="@+id/textView_contact"
+                    android:layout_below="@+id/imageView_in"
+                    android:layout_alignLeft="@+id/textView_email"
+                    android:layout_alignStart="@+id/textView_email"
+                    android:layout_marginTop="5dp" />
+
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:id="@+id/imageView_fb"
+                    android:src="@drawable/tw"
+                    android:layout_alignTop="@+id/textView_twlink"
+                    android:layout_alignLeft="@+id/imageView_in"
+                    android:layout_alignStart="@+id/imageView_in"
+                    android:layout_marginTop="2dp" />
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:id="@+id/imageView_tw"
+                    android:src="@drawable/ph"
+                    android:layout_alignTop="@+id/textView_contact"
+                    android:layout_alignLeft="@+id/imageView_in"
+                    android:layout_alignStart="@+id/imageView_in"
+                    android:layout_marginTop="2dp" />
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:id="@+id/imageView_in"
+                    android:src="@drawable/mail"
+                    android:layout_alignTop="@+id/textView_email"
+                    android:layout_alignLeft="@+id/textView_fblink2"
+                    android:layout_alignStart="@+id/textView_fblink2"
+                    android:layout_marginTop="2dp" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+</ScrollView>
