--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -45,6 +45,12 @@
         style="?android:attr/borderlessButtonStyle"
         android:src="@drawable/work"
          />
+        <!--<View-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/temp"-->
+            <!--android:layout_height="5dp"-->
+            <!--android:background="#d60d0d" />-->
         <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
@@ -55,12 +61,25 @@
         <ImageButton
         android:layout_width="0dp"
         android:layout_weight="1"
-
         android:layout_height="wrap_content"
         android:id="@+id/button_setting"
         android:src="@drawable/more"
         style="?android:attr/borderlessButtonStyle"
          />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="4"
+        android:layout_gravity="right|bottom">
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:id="@+id/temp"
+            android:layout_height="5dp"
+            android:background="#d60d0d" />
     </LinearLayout>
 
 
