--- a/app/src/main/res/layout/on_job_click.xml
+++ b/app/src/main/res/layout/on_job_click.xml
@@ -4,25 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Job Offerings"
-        android:id="@+id/textView_joboff_head"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
-<ImageButton
-    android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:src="@drawable/search"
-    android:id="@+id/search_jobs"
-    android:background="@android:color/transparent"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true" />
+
     <include
         layout="@layout/menu"
         android:id="@+id/include"
@@ -38,11 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView_jobpost"
-        android:paddingTop="10dp"
-
-        android:layout_below="@+id/textView_joboff_head"
-        android:layout_alignLeft="@+id/textView_joboff_head"
-        android:layout_alignStart="@+id/textView_joboff_head"
         android:layout_above="@+id/include"
-        android:layout_marginRight="10dp" />
+        android:layout_margin="5dp" />
 </RelativeLayout>
