--- a/app/src/main/res/layout/simple_list_item_job.xml
+++ b/app/src/main/res/layout/simple_list_item_job.xml
@@ -6,8 +6,9 @@
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/imageView3"
+        android:id="@+id/imageView_job_profile"
         android:layout_alignParentTop="true"
+        android:padding="5dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/image"/>
@@ -19,8 +20,8 @@
         android:text="Company Name"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView3"
-        android:layout_toEndOf="@+id/imageView3"
+        android:layout_toRightOf="@+id/imageView_job_profile"
+        android:layout_toEndOf="@+id/imageView_job_profile"
         android:layout_marginLeft="15dp" />
 
     <ImageView
@@ -61,7 +62,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Intern (2)"
         android:id="@+id/textView4"
-        android:layout_alignBottom="@+id/imageView3"
+        android:layout_alignBottom="@+id/imageView_job_profile"
         android:layout_alignLeft="@+id/textView_joblocation"
         android:layout_alignStart="@+id/textView_joblocation"
         android:layout_marginTop="5dp" />
