--- a/app/src/main/res/menu/menu_main2.xml
+++ b/app/src/main/res/menu/menu_main2.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.ashish.alumini.Main2Activity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always"
+        android:title="Apply"
+        />
 </menu>
